--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
 
     <script src="js/script.js"></script>
+    <p>hey</p> 
 </body>
 </html>
