--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
+    <!-- Denna fi skall alltid heta index.html och är den första filen på en hemsida -->
 
     <script src="js/script.js"></script>
     <p>hey</p> 
