gjort bättre knappar

--- a/nysida.html
+++ b/nysida.html
@@ -11,6 +11,13 @@
         <h5><a href="index.html">tillbaks</a></h5>
 
        <img id="wolf2" src="img/Three_wolves_growling.jpg">
-    
+      <p1><strong>Vargar är flockdjur</strong> </p1>
+       <p>Bland Sveriges fem stora rovdjur – björn, lo, järv, varg och människa – har vargen och människan en sak gemensamt. Vi är båda sociala djurarter som strävar efter att hitta långvariga relationer. <br>
+
+        Vargen lever i flock, en familj bestående av en tik, en hane och ungar. Det händer också att syskon till tiken eller hanen är med i flocken. <br> 
+        
+        Föräldraparet är flockens ledare. De håller ihop hela livet, om ingen av dem skjuts eller dör på annat sätt. Det är vanligast att bara ledartiken löper och får ungar, 
+        vanligtvis runt fem valpar. När valparna är mellan ett och två år, <br>
+        lämnar de flocken för att söka egna revir och en partner för att bilda egen familj</p>
 </body>
 </html>
