--- a/index.html
+++ b/index.html
@@ -11,29 +11,36 @@
 
 <div id="container">
 
-    <nav> <input placeholder="sök..." type="text" name="sök" id="countainer2"> </nav>
-    <img id="winter" src="img/winterwolf.jpg">
-    <header><h1>Rovdjur</h1>
-<figure>
-<img id="wolfbild" src="img/wolflogga.png"> 
+    <nav> <img id="wolfbild" src="img/logo.png"> <h1>Rovdjur</h1> 
+<figure> <input placeholder="sök..." type="text" name="sök" id="countainer2"> 
 
-<img id="wolf" src="img/wolf.jpg"> </figure>
+<button><a href="nysida.html">Om vargar</a></button> 
+ <button><a href="tredjesidan.html">Om oss</a></button>
+ <button><a href="djur.html" >Om andra djur</a></button>
+    </nav>
+   
+    <header>
+
+ 
+
+
 </header>
-<p>Vargar är flockdjur</p>
 
-    <aside><p>jag är ett stycke i aside</p>
-    <h5><a href="nysida.html">nysida</a></h5>
-  
+
+    <aside><p></p>
     
-    </aside>
-    <main>Bland Sveriges fem stora rovdjur – björn, lo, järv, varg och människa – har vargen och människan en sak gemensamt. Vi är båda sociala djurarter som strävar efter att hitta långvariga relationer. <br>
+</aside> 
 
-        Vargen lever i flock, en familj bestående av en tik, en hane och ungar. Det händer också att syskon till tiken eller hanen är med i flocken. <br> 
-        
-        Föräldraparet är flockens ledare. De håller ihop hela livet, om ingen av dem skjuts eller dör på annat sätt. Det är vanligast att bara ledartiken löper och får ungar, 
-        vanligtvis runt fem valpar. När valparna är mellan ett och två år, <br>
-        lämnar de flocken för att söka egna revir och en partner för att bilda egen familj</main> <br>
-    <footer>bllll</footer>
+
+    <main><p1><strong>Rovdjuren</strong>
+        (Carnivora) är en ordning i klassen däggdjur. Ordet "rovdjur" kan även användas i betydelserna köttätare och predator.
+
+        Det vetenskapliga namnet Carnivora är sammansatt av de latinska orden caro, carnis (kött) och voro (sluka). Namnet betyder alltså köttätare. Trots det är ett stort antal arter i denna ordning allätare som förutom kött även äter bär, gräs och andra växtämnen. En art, jättepandan, äter nästan uteslutande vegetabilisk föda. Det finns omkring 270 arter fördelade på 110 släkten[1] i denna ordning, som förekommer i många mycket speciella former. De lever på alla kontinenter, men i Antarktis finns de bara vid kusterna. I Australien, som tidigare inte hade några inhemska rovdjur i kontinentens inre, infördes dingon av människan. Däremot fanns andra landlevande köttätare i Australien, men dessa tillhör kräldjuren och pungdjuren.
+
+        Rovdjuren utvecklades ur creodonterna för omkring femtio miljoner år sedan under tertiärtiden.
+
+        </p1></main> <br>
+    <footer>Kontakta oss </footer>
 </div>
 
    
