Fixat med logo och rubrik

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         Rovdjuren utvecklades ur creodonterna för omkring femtio miljoner år sedan under tertiärtiden.
 
         </p1></main> <br>
-    <footer>Kontakta oss </footer>
+    <footer> </footer>
 </div>
 
    
