--- a/nysida.html
+++ b/nysida.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Document</title>
 </head>
 <body>
 
-        <h5><a href="index.html">tillbaks</a></h5>
+        <h5><a href="index.html">Hem</a></h5>
 
        <img id="wolf2" src="img/Three_wolves_growling.jpg">
       <p1><strong>Vargar är flockdjur</strong> </p1>
