--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h5><a href="index.html">tillbaks</a></h5>
+    <h5><a href="index.html">Hem</a></h5>
 
   
    <p2>Vi är en sida som fokuserar mest på vargar men har även stort intresse för andra rovdjur.
