--- a/djur.html
+++ b/djur.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-        <h5><a href="index.html">tillbaks</a></h5>
+        <h5><a href="index.html">Hem</a></h5>
 
         <p>Björnen är Sveriges största rovdjur. Många tycker björnen är spännande, men många tycker också att de verkar lite läskiga och vill helst inte möta dem i skogen.
 <p>Järven är det mest okända av våra stora rovdjur. 
