lagt till bilder och ändrat lite

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <button><a href="nysida.html">Om vargar</a></button> 
  <button><a href="tredjesidan.html">Om oss</a></button>
  <button><a href="djur.html" >Om andra djur</a></button>
-    </nav>
+    
+</nav>
    
     <header>
 
@@ -40,7 +41,10 @@
         Rovdjuren utvecklades ur creodonterna för omkring femtio miljoner år sedan under tertiärtiden.
 
         </p1></main> <br>
-    <footer> </footer>
+    <footer> 
+        <p>Kontakta oss här: Rovdjur@vargfakta.se </p>
+        <p>telefonnummer: xxx-xxx-xxx-xxx </p>
+    </footer>
 </div>
 
    
