--- a/nysida.html
+++ b/nysida.html
@@ -11,7 +11,7 @@
 
         <h5><a href="index.html">Hem</a></h5>
 
-       <img id="wolf2" src="img/Three_wolves_growling.jpg">
+       <img id="wolf2" src="img/Three_wolves_growling.jpg" width="600" height="400">
       <p1><strong>Vargar är flockdjur</strong> </p1>
        <p>Bland Sveriges fem stora rovdjur – björn, lo, järv, varg och människa – har vargen och människan en sak gemensamt. Vi är båda sociala djurarter som strävar efter att hitta långvariga relationer. <br>
 
