--- a/djur.html
+++ b/djur.html
@@ -9,10 +9,19 @@
 <body>
         <h5><a href="index.html">Hem</a></h5>
 
+
+   
+        <img id="bear" src="img/bjorn-mote.jpg" width="500" height="300">
+      
         <p>Björnen är Sveriges största rovdjur. Många tycker björnen är spännande, men många tycker också att de verkar lite läskiga och vill helst inte möta dem i skogen.
+
+                      
+        <img id="jarv" src="img/jarv_medium_ww255293-1024x683.jpg" width="500" height="300">
 <p>Järven är det mest okända av våra stora rovdjur. 
 Trots det har den ett envist rykte om att vara aggressiv och att den dödar för skojs skull. Men det är bara en myt. 
             </p>
+
+            <img id="lodjur" src="img/lodjur01.jpg" width="500" height="300">
 
             <p> Lodjuret är en stor katt. Faktiskt Europas största kattdjur!
                     Flera gånger har lodjuret röstats fram som Sveriges mest populära vilda djur. Men alla tycker inte att de bara är fina och snälla. Lodjuret är det rovdjur som tar mest renar för renägarna.</p>
