--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <div id="container">
 
     <nav> <img id="wolfbild" src="img/logo.png"> <h1>Rovdjur</h1> 
-<figure> <input placeholder="sök..." type="text" name="sök" id="countainer2"> 
+<figure> <input placeholder="sök..." type="text" name="sök" id="countainer2"> </figure>
 
 <button><a href="nysida.html">Om vargar</a></button> 
  <button><a href="tredjesidan.html">Om oss</a></button>
  <button><a href="djur.html" >Om andra djur</a></button>
-    
-</nav>
+  
+</nav>  
+
    
     <header>
 
